src/style.css
html,
body {
  margin: 0;
  padding: 0;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

#content {
  height: 100vh;
  padding-left: 1rem;
  padding-right: 1rem;
  text-align: center;
  background: hsl(220, 100%, 75%);
}

#page-header {
  padding-top: 1vh;
  display: flex;
  justify-content: center;
}

#search-input {
  background: hsl(221, 100%, 95%);
  border-radius: 8px;
}

.header-button {
  border-radius: 0px;
  border: hsl(0, 0%, 85%) solid;
  margin-left: 2px;
  background: hsl(0, 0%, 85%);
}

.header-button:hover {
  background: hsl(0, 0%, 80%);
  border: hsl(0, 0%, 80%) solid;
}

.header-button:active {
  background: hsl(0, 0%, 75%);
  border: hsl(0, 0%, 75%) solid;
}

.display-control-button {
  border-radius: 0px;
  border: hsl(0, 0%, 85%) solid;
  background: hsl(0, 0%, 85%);
  width: 7rem;
}

.display-control-button:hover {
  background: hsl(0, 0%, 80%);
  border: hsl(0, 0%, 80%) solid;
}

.display-control-button:active {
  background: hsl(0, 0%, 75%);
  border: hsl(0, 0%, 75%) solid;
}

#current-weather {
  height: 80vh;
  overflow-y: auto;
  display: flex;
  justify-content: center;
}

#current-weather-data {
  text-align: left;
}

#daily-data {
  display: none;
  height: 80vh;
  overflow-y: auto;
}

#hourly-data {
  display: none;
  height: 80vh;
  overflow-y: auto;
}

.full-day {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.full-hour {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.daily-data-wrapper {
  text-align: start;
  display: flex;
}

.hourly-data-wrapper {
  text-align: start;
  display: flex;
}

/* All weather icons */

img {
  max-height: 200px;
  max-width: 200px;
}

/* Responsive design */

@media screen and (min-width: 700px) {
  #content {
    min-height: 100vh;
  }

  #current-weather {
    height: 100%;
  }

  #button-display-wrapper {
    display: none;
  }

  #daily-data,
  #hourly-data {
    display: flex;
    height: 100%;
    overflow-y: hidden;
    overflow-x: auto;
  }

  .full-day,
  .full-hour {
    flex-direction: column;
  }

  #daily-title,
  #hourly-title {
    display: none;
  }
}

